Fix leaderboard alignment (#330)
* Fix leaderboard alignment
- Fix leaderboard alignment for `1280px` device
- Remove bold font style from 'Click to Expand' button

* Fix image lazy load issue
- Update popup css to fix image lazy loading issue

--- a/BikeWale.UI/UI/sass/es/tvs/leaderboard-popup.sass
+++ b/BikeWale.UI/UI/sass/es/tvs/leaderboard-popup.sass
@@ -13,6 +13,8 @@
 
 
 .leaderboard-popup
+	.popup
+		display: none
 	.popup-head
 		position: relative
 		background-color: color('white-smoke-7')
@@ -317,6 +319,11 @@
 
 .btn-cinnabar__mobile-text
   display: inline-block
+
+.leaderboard-popup
+    &.popup-active
+      .popup
+        @include flexbox
 
 // Styles for mobile
 @media only screen and (max-width: 799px)
