--- a/BikeWale.UI/UI/sass/es/tvs/leaderboard.sass
+++ b/BikeWale.UI/UI/sass/es/tvs/leaderboard.sass
@@ -30,7 +30,7 @@
     background-position: bottom
     will-change: transform
 
-  @include btn($font-size: 0, $font-weight: $font-semibold, $border-radius: 2px)
+  @include btn($font-size: 0, $font-weight: $font-normal, $border-radius: 2px)
 
   .leaderboard-btn
     @include vendor-prefix(animation,leaderboradbtn 1s forwards 4s)
@@ -188,7 +188,7 @@
       padding: 10px 15px
       background-color:  color('cinnabar-3')
       color: color('white')
-      margin-right: 30px
+      margin-right: 15px
 
   .leaderboard-btn__desktop-text
     display: block
@@ -313,7 +313,7 @@
 
 @media only screen and (min-width: 800px) and (max-width: 1025px)
   .leaderboard
-    padding: 25px 10px
+    padding: 10px
 
     .leaderboard-btn
       margin-right: 10px
